--- a/internal/web/templates/dashboard.gohtml
+++ b/internal/web/templates/dashboard.gohtml
@@ -14,11 +14,11 @@
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-end">
                             {{range .Navigation.Breadcrumbs}}
-                            {{if .Active}}
-                            <li class="breadcrumb-item active" aria-current="page">{{.Title}}</li>
-                            {{else}}
-                            <li class="breadcrumb-item"><a href="{{.URL}}">{{.Title}}</a></li>
-                            {{end}}
+                                {{if .Active}}
+                                    <li class="breadcrumb-item active" aria-current="page">{{.Title}}</li>
+                                {{else}}
+                                    <li class="breadcrumb-item"><a href="{{.URL}}">{{.Title}}</a></li>
+                                {{end}}
                             {{end}}
                         </ol>
                     </div>
@@ -34,7 +34,43 @@
             <div class="container-fluid">
                 <!--begin::Row-->
                 <div class="row">
+                    <div class="col-12">
+                        <!-- begin::Card-->
+                        <div class="card card-outline card-primary shadow mb-4">
+                            <!-- begin::Card Header-->
+                            <div class="card-header">
+                                <h3 class="card-title">Zones</h3>
+                                <div class="card-tools">
+                                    <div class="nav-tabs-custom">
+                                        <ul class="nav nav-tabs card-header-tabs" id="custom-content-below-tab"
+                                            role="tablist">
+                                            <li class="nav-item" role="presentation">
+                                                <button class="nav-link active" id="zones-tab" data-bs-toggle="tab" data-bs-target="#zones-tab-pane" type="button" role="tab" aria-controls="zones-tab-pane" aria-selected="true">Zones</button>
+                                            </li>
+                                            <li class="nav-item" role="presentation">
+                                                <button class="nav-link" id="reverse-ipv4-tab" data-bs-toggle="tab" data-bs-target="#reverse-ipv4-tab-pane" type="button" role="tab" aria-controls="reverse-ipv4-tab-pane" aria-selected="false">Zones in-addr.arpa</button>
+                                            </li>
+                                            <li class="nav-item" role="presentation">
+                                                <button class="nav-link" id="reverse-ipv6-tab" data-bs-toggle="tab" data-bs-target="#reverse-ipv6-tab-pane" type="button" role="tab" aria-controls="reverse-ipv6-tab-pane" aria-selected="false">Zones ip6.arpa</button>
+                                            </li>
 
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end::Card Header-->
+                            <!-- begin::Card Body-->
+                            <div class="card-body" id="tab_forward">
+                                <div class="tab-content" id="zones-tab-content">
+                                    <div class="tab-pane fade show active" id="zones-tab-pane" role="tabpanel" aria-labelledby="zones-tab" tabindex="0">Zones...</div>
+                                    <div class="tab-pane fade" id="reverse-ipv4-tab-pane" role="tabpanel" aria-labelledby="reverse-ipv4-tab" tabindex="0">Reverse IPv4...</div>
+                                    <div class="tab-pane fade" id="reverse-ipv6-tab-pane" role="tabpanel" aria-labelledby="reverse-ipv6-tab" tabindex="0">Reverse IPv6...</div>
+                                </div>
+                            </div>
+                            <!-- end::Card Body-->
+                        </div>
+                        <!-- end::Card-->
+                    </div>
                 </div>
                 <!--end::Row-->
             </div>
