--- a/internal/web/templates/settings/pdns-server.gohtml
+++ b/internal/web/templates/settings/pdns-server.gohtml
@@ -32,6 +32,18 @@
         <div class="app-content">
             <!--begin::Container-->
             <div class="container-fluid">
+                {{if .Success}}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{.Success}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{end}}
+                {{if .Error}}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{.Error}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{end}}
                 <!--begin::Row-->
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4">
@@ -48,17 +60,19 @@
                                         <div id="powerdns-server-url-help" class="form-text">Enter the URL of your PowerDNS server API endpoint.</div>
                                     </div>
                                     <div class="mb-3">
+                                        <label for="powerdns-server-vhost" class="form-label">vHost</label>
+                                        <input type="text" class="form-control" id="powerdns-server-vhost" name="vhost"
+                                               placeholder="localhost"
+                                               value="{{.Settings.VHost}}">
+                                        <div id="powerdns-server-vhost-help" class="form-text">Enter the vhost of you PowerDNS Server.</div>
+                                    </div>
+                                    <div class="mb-3">
                                         <label for="powerdns-server-api-key" class="form-label">PowerDNS API Key</label>
                                         <input type="password" class="form-control" id="powerdns-server-api-key" name="api_key"
                                                placeholder="Enter your PowerDNS API key"
                                                value="{{.Settings.APIKey}}">
                                     </div>
-                                    <div class="mb-3">
-                                        <label for="powerdns-server-version" class="form-label">PowerDNS Version</label>
-                                        <input type="text" class="form-control" id="powerdns-server-version" name="version"
-                                               placeholder="Enter your PowerDNS version (e.g., 4.9.4)"
-                                               value="{{.Settings.Version}}">
-                                    </div>
+
                                     <button type="submit" class="btn btn-primary">Save Settings</button>
                                 </div>
                             </form>
