--- a/internal/web/templates/dashboard/dashboard.gohtml
+++ b/internal/web/templates/dashboard/dashboard.gohtml
@@ -204,7 +204,7 @@
                                             {{range $tabData.Zones}}
                                             <tr>
                                                 <td>
-                                                    <a href="/zone/{{.Name}}" class="text-decoration-none">
+                                                    <a href="/zone/edit/{{.Name}}" class="text-decoration-none">
                                                         <code>{{.Name}}</code>
                                                     </a>
                                                 </td>
