--- a/internal/web/templates/partials/mainjs.gohtml
+++ b/internal/web/templates/partials/mainjs.gohtml
@@ -1,4 +1,21 @@
 <!-- Begin Main JavaScript dependencies -->
+<!-- jQuery -->
+<script
+        src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"
+></script>
+
+<!-- DataTables -->
+<script
+        src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.datatables.net/2.1.8/js/dataTables.bootstrap5.min.js"
+        crossorigin="anonymous"
+></script>
+
 <script
         src="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.11.0/browser/overlayscrollbars.browser.es6.min.js"
         crossorigin="anonymous"
