--- a/internal/web/templates/partials/maincss.gohtml
+++ b/internal/web/templates/partials/maincss.gohtml
@@ -1,5 +1,12 @@
 
 <link rel="stylesheet" href="../../static/vendor/adminlte-v4/css/adminlte.min.css">
+<!--begin::DataTables-->
+<link
+        rel="stylesheet"
+        href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.min.css"
+        crossorigin="anonymous"
+/>
+<!--end::DataTables-->
 <!--begin::Fonts-->
 <link
         rel="stylesheet"
