feat(zone): add record type validation and loading functionality
Add loadAllowedRecordTypes to retrieve permitted record types based on zone settings (forward/reverse), and validateRecordsUpdateAreValidTypes to enforce type restrictions during record updates.

--- a/internal/web/templates/partials/header-navigation.gohtml
+++ b/internal/web/templates/partials/header-navigation.gohtml
@@ -60,29 +60,32 @@
             <!--begin::User Menu Dropdown-->
             <li class="nav-item dropdown user-menu">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                    <span class="d-none d-md-inline">Felix Muster</span>
+                    <i class="bi bi-person-circle me-1"></i>
+                    <span class="d-none d-md-inline">{{ if .CurrentUser }}{{ .CurrentUser.Username }}{{ else }}User{{ end }}</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
-                    <!--begin::User Image-->
+                    <!--begin::User Header-->
                     <li class="user-header text-bg-primary">
-                        <p>Alexander Pierce - Web Developer</p>
+                        {{ if .CurrentUser }}
+                            <p>
+                                {{ .CurrentUser.Username }}
+                                {{ if .CurrentUser.Email }}<br><small>{{ .CurrentUser.Email }}</small>{{ end }}
+                            </p>
+                        {{ else }}
+                            <p>User</p>
+                        {{ end }}
                     </li>
-                    <!--end::User Image-->
-                    <!--begin::Menu Body-->
-                    <li class="user-body">
-                        <!--begin::Row-->
-                        <div class="row">
-                            <div class="col-4 text-center"><a href="#">Followers</a></div>
-                            <div class="col-4 text-center"><a href="#">Sales</a></div>
-                            <div class="col-4 text-center"><a href="#">Friends</a></div>
-                        </div>
-                        <!--end::Row-->
-                    </li>
-                    <!--end::Menu Body-->
+                    <!--end::User Header-->
                     <!--begin::Menu Footer-->
                     <li class="user-footer">
-                        <a href="#" class="btn btn-default btn-flat">Profile</a>
-                        <a href="#" class="btn btn-default btn-flat float-end">Sign out</a>
+                        {{ if .CurrentUser }}
+                            <a href="/admin/user/{{ .CurrentUser.ID }}/edit" class="btn btn-default btn-flat">
+                                <i class="bi bi-person-gear me-1"></i>Profile
+                            </a>
+                        {{ end }}
+                        <a href="/logout" class="btn btn-default btn-flat float-end">
+                            <i class="bi bi-box-arrow-right me-1"></i>Sign out
+                        </a>
                     </li>
                     <!--end::Menu Footer-->
                 </ul>
