--- a/internal/web/templates/partials/maincss.gohtml
+++ b/internal/web/templates/partials/maincss.gohtml
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="../../static/vendor/adminlte-v4/css/adminlte.min.css">
+<link rel="stylesheet" href="/static/vendor/adminlte-v4/css/adminlte.min.css">
 <!--begin::DataTables-->
 <link
         rel="stylesheet"
