--- a/internal/web/templates/partials/mainjs.gohtml
+++ b/internal/web/templates/partials/mainjs.gohtml
@@ -21,6 +21,6 @@
         crossorigin="anonymous"
 ></script>
 
-<script src="../../static/vendor/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
-<script src="../../static/vendor/adminlte-v4/js/adminlte.min.js"></script>
+<script src="/static/vendor/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
+<script src="/static/vendor/adminlte-v4/js/adminlte.min.js"></script>
 <!-- End Main JavaScript dependencies -->
