--- a/internal/web/templates/partials/sidebar-navigation.gohtml
+++ b/internal/web/templates/partials/sidebar-navigation.gohtml
@@ -90,7 +90,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/admin/group" class="nav-link{{if and .Navigation (eq .Navigation.ActivePage "group")}} active{{end}}">
+                        <i class="nav-icon bi bi-people"></i>
+                        <p>Groups</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/admin/user" class="nav-link{{if and .Navigation (eq .Navigation.ActivePage "user")}} active{{end}}">
                         <i class="nav-icon bi bi-person-vcard"></i>
                         <p>Users</p>
                     </a>
